cabal-version:       2.4
name:                plutus-js-libraries
version:             0.1.0.0
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
description:         JavaScript dependencies for plutus contracts
build-type: Simple
extra-source-files:  CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus

library
  build-depends:       base ^>=4.12.0.0
  default-language:    Haskell2010
  js-sources: jsbits/crypto-cbits.js
              jsbits/crypto-wrappers.js
